Your commit message for nakulan branch

--- a/research/CNN_Evaluation.ipynb
+++ b/research/CNN_Evaluation.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -93,15 +102,6 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as gowtham-dd\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,57 +296,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-25 01:43:53,823: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-07-25 01:43:53,844: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-07-25 01:43:53,844: INFO: common: created directory at: artifacts]\n",
-      "[2025-07-25 01:43:53,844: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "127/127 [==============================] - 2s 16ms/step\n",
-      "[2025-07-25 01:44:00,698: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n",
-      "[2025-07-25 01:44:00,717: INFO: 2308986648: Evaluation metrics: {'accuracy': 1.0, 'precision': 1.0, 'recall': 1.0, 'f1_score': 0.9999999500000026}]\n"
+      "[2025-07-25 01:59:39,376: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-07-25 01:59:39,403: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-07-25 01:59:39,406: INFO: common: created directory at: artifacts]\n",
+      "[2025-07-25 01:59:39,410: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "127/127 [==============================] - 3s 20ms/step\n",
+      "[2025-07-25 01:59:47,113: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n",
+      "[2025-07-25 01:59:47,119: INFO: 2308986648: Evaluation metrics: {'accuracy': 1.0, 'precision': 1.0, 'recall': 1.0, 'f1_score': 0.9999999500000026}]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/07/25 01:44:02 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2025/07/25 01:59:49 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-25 01:44:03,631: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _update_step_xla while saving (showing 4 of 4). These functions will not be directly callable after loading.]\n",
-      "[2025-07-25 01:44:04,197: INFO: builder_impl: Assets written to: C:\\Users\\dell\\AppData\\Local\\Temp\\tmpycwh5eqn\\model\\data\\model\\assets]\n"
+      "[2025-07-25 01:59:51,800: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _update_step_xla while saving (showing 4 of 4). These functions will not be directly callable after loading.]\n",
+      "[2025-07-25 01:59:52,596: INFO: builder_impl: Assets written to: C:\\Users\\dell\\AppData\\Local\\Temp\\tmpqodju0f1\\model\\data\\model\\assets]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "d:\\Data Science\\END to END Proj\\KidneyDiseaseMLOPS\\venv\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Registered model 'Kidney_SavedModel' already exists. Creating a new version of this model...\n",
-      "2025/07/25 01:44:37 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Kidney_SavedModel, version 2\n"
+      "2025/07/25 02:00:27 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Kidney_SavedModel, version 4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-25 01:44:37,262: INFO: 2308986648: MLflow logging completed successfully]\n"
+      "[2025-07-25 02:00:27,257: INFO: 2308986648: MLflow logging completed successfully]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '2' of model 'Kidney_SavedModel'.\n"
+      "Created version '4' of model 'Kidney_SavedModel'.\n"
      ]
     }
    ],
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
